# repo-onboarding-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
eval/: benchmark_repos.json
fine_tuning/: collect_data.py  evaluate.py  fuse_and_convert.sh  prepare_data.py  repos.json  serve.sh  train.sh
fine_tuning/adapters/: adapter_config.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentGraph.jsx  ImportGraphViz.jsx
frontend/src/pages/: BenchmarkPage.jsx  GeneratePage.jsx  RepoDetailPage.jsx
src/: config.py
src/agent/: graph.py  llm.py  state.py
src/agent/nodes/: clone.py  explorer.py  indexer.py  initialize.py  planner.py  refiner.py  reflector.py  synthesizer.py  validator.py
src/agent/prompts/: explorer.py  planner.py  refiner.py  reflector.py  synthesizer.py
src/agent/tools/: dependency_tools.py  file_tools.py  git_tools.py  graph_tools.py  search_tools.py  vector_tools.py
src/api/: jobs.py  main.py  runner.py
src/eval/: benchmark.py  judge.py  metrics.py
tests/: conftest.py  test_eval.py  test_graph.py  test_nodes.py  test_tools.py
